--- a/Danny_Xia_Final_Project_Fall2024.ipynb
+++ b/Danny_Xia_Final_Project_Fall2024.ipynb
@@ -6,7 +6,7 @@
         "id": "t1wBGmhjARgQ"
       },
       "source": [
-        "# DSE 207R FINAL PROJECT\n",
+        "# DSC 207R FINAL PROJECT\n",
         "## Fall 2024\n",
         "### Due Date:  December 10th, 2024"
       ]
